Fixed TOC rounded on ie

--- a/htdocs/style/ie-css3-support.css
+++ b/htdocs/style/ie-css3-support.css
@@ -1,3 +1,3 @@
-.rounded, .button a, #TOC, #TOC #header, #menu a, .figure {
+.rounded, .button a, #menu a, .figure, .table-of-contents, #table-of-contents-title {
     behavior: url(/style/PIE/PIE.htc);
 }
